unpackaged/main/default/objects/User/fields/Date_terms_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_terms_accepted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date terms accepted</label>
    <type>Date</type>
</CustomField>