unpackaged/main/default/objects/User/fields/first_approver__c.field-meta.xml
<CustomField>
    <fullName>first_approver__c</fullName>
    <label>First Approver</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>