unpackaged/main/default/objects/User/fields/Terms_accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms accepted</label>
    <type>Checkbox</type>
</CustomField>